--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport"  content="width=device-width, initial-scale=1.0">
     <title>vebsite</title>
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <header>
             <div class="top">
                 <img src="free-icon-correction-16770401.png" alt="Логотип" class="logo">
@@ -26,11 +28,13 @@
             </div>
         </header>
         <aside>
-            <ul>
-                <li>Навигация по странице</li>
-                <li>Фронтенд</li>
-                <li>Бэкенд</li>
-            </ul>
+            <div class="nav">
+                <ul  style="list-style-type: none;">
+                    <li>Навигация по странице</li>
+                    <li>Фронтенд</li>
+                    <li>Бэкенд</li>
+                </ul>
+            </div>
         </aside>
         <main>
             <h1 name="top">Добро пожаловать на мой сайт</h1>
@@ -53,11 +57,13 @@
                 стабильную работу приложения и безопасность данных.</p>
         </main>
         <footer> 
-            <ul >
-                <li><p>© Малыгин Артём Валерьевич, 2024</p></li>
-                <li><a href=""><img src="1710963677_.png" alt="telegram"style="width: 5%;" ></a></li>
-                <li><a href=""><img src="1710963677_.png" alt="telegram"style="width: 5%;" ></a></li>
-            </ul>
+            <div class="info">
+                <ul style="list-style-type: none;">
+                    <li><p>© Малыгин Артём Валерьевич, 2024</p></li>
+                    <li><a href=""><img src="1710963677_.png" alt="telegram" style="width: 5%;" ></a></li>
+                    <li><a href=""><img src="1710963677_.png" alt="telegram" style="width: 5%;" ></a></li>
+                </ul>
+            </div>
         </footer>
 </body>
 </html>
