--- a/index2.html
+++ b/index2.html
@@ -27,28 +27,36 @@
             </div>
         </header>
         <aside>
-            <ul>
-                <li>Навигация по странице</li>
-                <li>Фронтенд</li>
-                <li>Бэкенд</li>
-            </ul>
+            <div class="nav">
+                <ul  style="list-style-type: none;">
+                    <li>Навигация по странице</li>
+                    <li>Фронтенд</li>
+                    <li>Бэкенд</li>
+                </ul>
+            </div>    
         </aside>
         <main>
             <h1 name="top">Разработка веб-приложения</h1>
-            <div class="card">
-                <img src="orig.webp" alt="me" style="width: 20%;">
-                <p>Сайт-визитка</p>
-                <button type="order" class="open-modal">заказать</button>
+            <div class="card" style="width: 18rem;">
+                <img src="orig.webp" class="card-img-top" alt="me">
+                <div class="card-body">
+                  <p class="card-text">Корпоративный сайт</p>
+                  <button type="order" class="open-modal">заказать</button>
+                </div>
             </div>
-            <div class="card">
-                <img src="orig.webp" alt="me" style="width: 20%;">
-                <p>Корпоративный сайт</p>
-                <button type="order" class="open-modal">заказать</button>
+            <div class="card" style="width: 18rem;">
+                <img src="orig.webp" class="card-img-top" alt="me">
+                <div class="card-body">
+                  <p class="card-text">Корпоративный сайт</p>
+                  <button type="order" class="open-modal">заказать</button>
+                </div>
             </div>
-            <div class="card">
-                <img src="orig.webp" alt="me" style="width: 20%;">
-                <p>Интернет-магазин</p>
-                <button type="order" class="open-modal">заказать</button>
+            <div class="card" style="width: 18rem;">
+                <img src="orig.webp" class="card-img-top" alt="me">
+                <div class="card-body">
+                  <p class="card-text">Корпоративный сайт</p>
+                  <button type="order" class="open-modal">заказать</button>
+                </div>
             </div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus, nemo. Exercitationem molestiae veritatis animi ratione molestias reiciendis sint quam facilis eaque, odit, excepturi sapiente dolore similique accusamus nisi possimus. Iste, expedita. Eius minus quas quisquam sint illo libero sed excepturi sit dolorem eveniet minima at tempore quo vel consequatur ex ipsum veritatis alias, exercitationem perferendis in! Commodi fuga, in, tempora voluptas dolor eius corrupti et nulla a nobis, quaerat quam saepe atque. Nihil libero tempora fuga totam tenetur nesciunt? Magni pariatur, commodi quam dignissimos libero possimus error dolorem odio dolor eveniet maxime sequi, unde ad repellat sed veritatis? Rerum voluptatum aspernatur rem perferendis impedit recusandae fugit ipsum ipsa tenetur sed officia ab voluptates similique dolorem, enim ipsam, atque dolore quo ullam. Nulla error vitae, id, atque, eos aliquid voluptatum cumque voluptas quis consectetur rem! Debitis unde totam, facilis rerum aspernatur voluptas! Dicta asperiores eaque repudiandae sint cupiditate accusamus magnam molestiae dolor exercitationem vel ad molestias eius earum deleniti quibusdam delectus neque, quia facere ipsa, distinctio atque placeat iste blanditiis rerum. Magnam nobis porro aspernatur labore impedit earum, deleniti delectus blanditiis ab molestiae ut dolorem modi dolor ratione corporis natus quia explicabo in minus? Obcaecati, voluptatem distinctio sed, facilis vel expedita ipsam itaque voluptatibus nostrum placeat laboriosam nesciunt sit quam quo? Fugit esse, assumenda expedita accusantium vero quo ea in veniam debitis cum. Eaque delectus modi fugit dolore ullam error, a nesciunt eligendi illum nihil placeat incidunt atque amet qui expedita odit, dignissimos consequatur et repellat necessitatibus, totam illo. Aut ducimus, error porro corporis neque ipsum voluptate modi? Earum culpa hic aspernatur inventore? Repudiandae, rem unde? Non hic quos pariatur aut repellendus esse suscipit est, blanditiis, alias neque voluptatem quasi fugiat ea aspernatur rem. Iste error impedit mollitia labore aliquam non quisquam dicta voluptatem placeat aperiam! Aut beatae pariatur delectus ea!</p>
             <div class="modal" id="modal">
@@ -96,11 +104,13 @@
             </div>
         </main>
         <footer> 
-            <ul >
-                <li><p>© Малыгин Артём Валерьевич, 2024</p></li>
-                <li><a href=""><img src="1710963677_.png" alt="telegram"style="width: 5%;" ></a></li>
-                <li><a href=""><img src="1710963677_.png" alt="telegram"style="width: 5%;" ></a></li>
-            </ul>
+            <div class="info">
+                <ul style="list-style-type: none;">
+                    <li><p>© Малыгин Артём Валерьевич, 2024</p></li>
+                    <li><a href=""><img src="1710963677_.png" alt="telegram"style="width: 5%;" ></a></li>
+                    <li><a href=""><img src="1710963677_.png" alt="telegram"style="width: 5%;" ></a></li>
+                </ul>
+            </div>   
         </footer>
         <script src="index.js"></script>
         
