--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
         </header>
         <aside>
             <div class="nav">
-                <ul  style="list-style-type: none;">
+                <ul  class="ul">
                     <li>Навигация по странице</li>
                     <li>Фронтенд</li>
                     <li>Бэкенд</li>
@@ -105,7 +105,7 @@
         </main>
         <footer> 
             <div class="info">
-                <ul style="list-style-type: none;">
+                <ul class="ul">
                     <li><p>© Малыгин Артём Валерьевич, 2024</p></li>
                     <li><a href=""><img src="1710963677_.png" alt="telegram"style="width: 5%;" ></a></li>
                     <li><a href=""><img src="1710963677_.png" alt="telegram"style="width: 5%;" ></a></li>
