--- a/index3.html
+++ b/index3.html
@@ -6,6 +6,7 @@
     <title>vebsite</title>
     <link rel="icon" href="free-icon-correction-16770401.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
@@ -160,6 +161,7 @@
                         </tbody>
                     </table>
                 </div>
+                <button id="viewSecondSemester" class="btn btn-primary mt-3">Посмотреть практики другого семестра</button>
             </div>
 
         <div class="accordion" id="accordionExample">
@@ -229,7 +231,7 @@
         </div>
         <div>
             <video width="100%" height="360" controls>
-                <source src="lady.mp4" type="video/mp4">
+                <source src="lady-gaga-bloody-mary-wednesday-addams-long-version_749904.mp4" type="video/mp4">
                 Ваш браузер не поддерживает тег <video>.
             </video>
         </div>
@@ -243,7 +245,7 @@
             </ul>
         </div>
     </div><div class="fixed-bottom"><button type="button" class="btn btn-outline-secondary"><a class="btn" href="#top">↑ Top</a></button></div>
+    <script src="index3.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
 </body>
 </html>
