--- a/index2.html
+++ b/index2.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"  content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vebsite</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <link rel="icon" href="free-icon-correction-16770401.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -111,15 +112,15 @@
                     <div>
                         <div>
                             <p>Как вас зовут</p>
-                            <label for="name"><input type="text" required ></label>
+                            <label for="name"><input type="text" required data-name="name" data-type="text" /></label>
                         </div>
                         <div>
                             <p>Ваш e-mail</p>
-                            <label for="email"><input type="email" class="form-control" id="floatingInput" placeholder="name@example.com"></label>
+                            <label for="email"><input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" data-name="email" data-type="email"></label>
                         </div>
                         <div>
                             <p>Телефон</p>
-                            <label for="phone"><input type="text" id="phone-input" placeholder="Введите номер телефона"></label>
+                            <label for="phone"><input type="tel" id="phone-input" placeholder="Введите номер телефона" data-name="phone" data-type="phone"></label>
                         </div>
                         <div>
                             <p>Страна</p>
@@ -133,15 +134,15 @@
                         </div>
                         <div>
                             <p>Дата</p>
-                            <label for="date"><input type="date"></label>
+                            <label for="date"><input type="date" data-name="date" data-type="date"></label>
                         </div>
                         <div>
                             <p>Комментарий</p>
-                            <label for="comments"><textarea name="" id=""></textarea></label>
+                            <label for="comments"><textarea name="" id="" data-name="comment" data-type="text"></textarea></label>
                         </div>
                     </div>
-                    <p><input type="checkbox">Согласие на обработку данных</p>
-                    <button class="close">Отправить заявку</button>
+                    <p><input type="checkbox" data-name="consent" data-type="checkbox">Согласие на обработку данных</p>
+                    <button class="aply">Отправить заявку</button>
                 </div>
             </div>
         </div>
@@ -153,9 +154,10 @@
             </ul>
         </div>
     </div><div class="fixed-bottom"><button type="button" class="btn btn-outline-secondary"><a class="btn" href="#top">↑ Top</a></button></div>
-    <script src="index.js"></script>
 
+    <script src="index2.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
 </body>
 </html>
