--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,6 @@
     <title>vebsite</title>
     <link rel="icon" href="free-icon-correction-16770401.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
@@ -62,6 +61,7 @@
                 <li>Навигация по странице</li>
                 <li>Фронтенд</li>
                 <li>Бэкенд</li>
+                <li><h1>H1 string</h1></li>
             </ul>
         </div>
 
@@ -79,7 +79,7 @@
                                 <th>Выполнение</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="practicesTableBody">
                             <tr>
                                 <td>1</td>
                                 <td>Основы языка HTML</td>
@@ -161,7 +161,58 @@
                         </tbody>
                     </table>
                 </div>
+                <input type="text" id="newPracticeInput" placeholder="Введите новую тему">
+                <button id="addPracticeButton" class="btn btn-primary mt-3">Добавить тему</button><br>
                 <button id="viewSecondSemester" class="btn btn-primary mt-3">Посмотреть практики другого семестра</button>
+            </div>
+
+            <div class="section p-3 border rounded bg my-3 table-background">
+                <h5 id="prak" class="h4">Лекции</h5>
+                <div class="table-responsive" id="lecturesTable" style="display: none;">
+                    <table class="table">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>Номер</th>
+                                <th>Тема</th>
+                                <th>Посещение</th>
+                                <th>Выполнение</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Лекция 1</td>
+                                <td><input type="checkbox"></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Лекция 2</td>
+                                <td><input type="checkbox"></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Лекция 3</td>
+                                <td><input type="checkbox"></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>Лекция 4</td>
+                                <td><input type="checkbox"></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                            <tr>
+                                <td>8</td>
+                                <td>Лекция 8</td>
+                                <td><input type="checkbox"></td>
+                                <td><input type="checkbox"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <button id="showLecturesButton" class="btn btn-primary mt-3">Показать лекции</button>
             </div>
 
         <div class="accordion" id="accordionExample">
@@ -235,6 +286,9 @@
                 Ваш браузер не поддерживает тег <video>.
             </video>
         </div>
+        <div>
+            <p id="animatedParagraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, quod molestiae. Quo cum nam a nihil nemo nisi explicabo nostrum dolorum corporis sequi! Temporibus error voluptates vero laboriosam ducimus magni.</p>
+        </div>
 
         </div>
     
@@ -244,7 +298,9 @@
                     <li><a href=""><img src="1710963677_.png" alt="telegram" style="width: 5%;" ></a></li>
             </ul>
         </div>
-    </div><div class="fixed-bottom"><button type="button" class="btn btn-outline-secondary"><a class="btn" href="#top">↑ Top</a></button></div>
+    </div>
+    <div class="fixed-bottom"><button type="button" class="btn btn-outline-secondary"><a class="btn" href="#top">↑ Top</a></button></div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="index3.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
